--- a/inspec.yml
+++ b/inspec.yml
@@ -1,5 +1,11 @@
 name: inspec-tests
 title: InSpec Profile
+inputs:
+  max_retries:
+    description: 'Maximum number of retries'
+    type: string
+    required: true
+    value: 2
 maintainer: The Authors
 copyright: The Authors
 copyright_email: you@example.com
